# MADE_2021_cpp_course

./: .gitignore  README.md
.github/workflow/: ci.yml  task3_ci.yml
.github/workflows/: ci.yml  task1_ci.yml  task2_ci.yml  task3_ci.yml  task4_ci.yml
home_task_1/: CMakeLists.txt  README.md  main.c
home_task_1/.github/workflows/: ci.yml
home_task_1/linters/: run.sh
home_task_1/specialists_db_lib/: CMakeLists.txt  specialists_db.c  specialists_db.h
home_task_1/tests/: CMakeLists.txt  specialists.txt  test_specialists.cpp
home_task_2/: CMakeLists.txt  README.md  main.cc
home_task_2/.github/workflow/: ci.yml
home_task_2/linters/: run.sh
home_task_2/matrix_calculator_lib/: CMakeLists.txt  matrix_calculator.h
home_task_2/tests/: CMakeLists.txt  test_matrix_calculator.cc
home_task_3/: CMakeLists.txt  README.md  main.cc
home_task_3/set_lib/: CMakeLists.txt  set.h
home_task_3/tests/: CMakeLists.txt  test_set.cc
home_task_4/: CMakeLists.txt  main.cc
home_task_4/countif_lib/: countif.h
home_task_4/countif_parallel_lib/: CMakeLists.txt  countif_parallel.cc  countif_parallel.h
home_task_4/countif_sequential_lib/: CMakeLists.txt  countif_sequential.cc  countif_sequential.h
home_task_4/generate_test/: CMakeLists.txt  generate_test.cc
home_task_4/linters/: run.sh
home_task_4/stress_test/: run_tests.sh
